# mapped_queue

./: CMakeLists.txt  README.md  main.cpp  mapped_queue.hpp  run_example.sh  run_test.sh
include/: concurrent_queue.hpp  shared_map.hpp
tests/: CMakeLists.txt  test_concurrent_queue.cpp  test_shared_map.cpp
